+ dummy build

Version: V0.1B117 Date: Sun Mar 20 14:06:55 2005 +++++++++++++++++++++++++++++++
+ Mesh data structure added to Mesh module
+ Feature import for STL files added
+ Viewprovider for meshes added
+ Integration of latest Image module source
+ RFE 1159671 implemented (elements in alphabetic order)
+ Finishing drag&drop multible files
+ Finishing open from command line and droping on Programm icon
+ solving load dependand modules
+ more convenient Python console
+ Bug 1149706 fixed (Cannot load CAD curves)
+ RFE 1214187 implemented (Remove views from main window)

Version: V0.1B118 Date: Tue Jun 07 15:32:43 2005 +++++++++++++++++++++++++++++++
+ Bug 1165895 fixed (Bug in closing document)
+ RFE 1223968 implemented (Pasting scripts in the python console)
+ Bug 1224686 Action.h: command not found error during linux make
  Check for QT_UIC and QT_MOC again after the Qt test

Version: V0.1B119 Date: Wed Jun 29 12:57:43 2005 +++++++++++++++++++++++++++++++
+ reworking recalculation of the document
+ implementing Feature viewing modes and material
  - Python binding for that all
+ ViewProvider framework in Inventor viewer
+ remove CasCade Viewer
+ Interpreter::runString returns now a value
+ Improving mouse interaktions
  - fix and enable Spin rotation
  - implement panTo middle mouse double click
+ implementing selection
+ using "right" transparency mode
+ RFE 1187174 implemented (Calling "print" for internal Python objects)
+ Several improvements:
  - Command Std_ViewFullScreen switched to toggle command
  - Use ESC or F to leave fullscreen mode (hard coded in MDIView)
  - Ignore ContextEvents and accelerators while the progress bar is working
  - Use double prescision for double in parameter editor
  - Consider fullscreen windows in ApplicationWindow::activeView()
+ Initial impl. of a simple color legend
+ Show progressbar not from beginning but after a few seconds
+ Using own event loop (QDialog not exception-safe)