@@ -3788,3 +3788,35 @@ const char *open_pixmap[] = {
 "QtQtQt.#.#.#.#.#.#.#.#.#.#.abKbLbMbNbObP.a.#",
 "QtQtQtQtQt.#.#.#.#.#.#.#.#.#.#.a.a.a.a.a.a.#",
 "QtQtQtQtQtQtQt.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#"};
+
+/* XPM */
+static const char *temperature_mapping[] = {
+"20 20 7 1",
+"& c #A500FF",
+"  c white",
+". c None",
+"# c #00C900",
+"$ c #E9FF00",
+"% c red1",
+"( c #002EFF",
+"....................",
+"....................",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"...%%%$$$###&&&(((..",
+"....................",
+"...................."
+};
